# cognition-agent-decisions

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-website.yml
ProductDocumentation/: 01-Product-Overview.md  02-Architecture.md  03-Module-Reference.md  04-API-Reference.md  05-CLI-Reference.md  06-Installation-Guide.md  07-Configuration-Guide.md  08-Dashboard-Guide.md  10-MCP-Integration.md  README.md
a2a/: __init__.py  auth.py  config.py  mcp_schemas.py  mcp_server.py  server.py
a2a/cstp/: __init__.py  attribution_service.py  bm25_index.py  bridge_abstractors.py  bridge_extractor.py  bridge_hook.py  calibration_service.py  circuit_breaker_service.py  compaction_service.py  decision_service.py  deliberation_tracker.py  dispatcher.py  drift_service.py  graph_service.py  guardrails_service.py  models.py  preaction_service.py  query_service.py  ready_service.py  reason_stats_service.py  reindex_service.py  session_context_service.py
a2a/models/: __init__.py  agent_card.py  health.py  jsonrpc.py
config/: server.yaml
dashboard/: .dockerignore  Dockerfile  app.py  auth.py  config.py  cstp_client.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt
dashboard/static/: style.css
dashboard/templates/: base.html  breakers.html  breakers_partial.html  calibration.html  decision.html  decisions.html  decisions_partial.html  deliberation.html  deliberation_partial.html  overview.html  review.html
dashboard/tests/: conftest.py  test_app.py  test_cstp_client.py
demo/: README.md  docker-compose.yml  seed_data.py
demo/config/: server.yaml
demo/demo-agent/: Dockerfile  agent.py
docs/: AGENT-GUIDE.md  CSTP-v0.7.0-DESIGN.md  DOCKER.md  F011-IMPLEMENTATION-PLAN.md  F014-IMPLEMENTATION-PLAN.md  F015-IMPLEMENTATION-PLAN.md  F016-IMPLEMENTATION-PLAN.md  F017-IMPLEMENTATION-PLAN.md  F027-decision-quality.md  IMPLEMENTATION_PLAN.md  MCP-QUICKSTART.md  P0-IMPLEMENTATION-PLAN.md  PROVISIONAL-PATENT-OUTLINE.md  WORKFLOWS.md
docs/features/: F001-CHECKLIST.md  F001-cstp-server.md  F001-openclaw-skill.md  F002-CHECKLIST.md  F002-pattern-detection.md  F003-enhanced-guardrails.md  F004-announce-intent.md  F006-docker-deployment.md  F011-implementation-plan.md  F011-phases.md  F014-implementation-plan.md  F015-implementation-plan.md  F016-implementation-plan.md  F017-implementation-plan.md  F019-list-guardrails.md  F022-mcp-server.md  F023-deliberation-traces.md  F023-phase2-implementation.md  F024-bridge-definitions.md  F033-censor-layer.md  F035-semantic-state-transfer.md  F036-reasoning-continuity.md  F039-protocol-stack.md  F041-memory-compaction.md  F043-distributed-merge.md  F044-agent-work-discovery.md  F045-graph-storage-layer.md  F046-pre-action-hook.md  F047-session-context.md  F048-multi-vectordb.md  F049-live-deliberation-viewer.md  F050-sqlite-storage-layer.md  F051-docker-compose-demo.md  F052-dashboard-export.md  F053-query-deduplication.md  F054-cel-guardrails.md  F054-decision-admission-gate.md  INDEX.md  V0.9.0-FEATURES.md
docs/research/: FEDERATION.md
docs/specs/: F002-QUERY-DECISIONS.md  F003-CHECK-GUARDRAILS.md  F005-CSTP-CLIENT.md  F006-DOCKER-DEPLOYMENT.md  F007-RECORD-DECISION.md  F008-REVIEW-DECISION.md  F009-GET-CALIBRATION.md  F010-PROJECT-CONTEXT.md  F023-DELIBERATION-TRACES.md  F023-PHASE2-IMPLEMENTATION.md  F027-CENSOR-LAYER.md  F028-DECOMPOSED-CONFIDENCE.md
guardrails/: circuit_breakers.yaml  cornerstone.yaml  deliberation.yaml  quality.yaml
guardrails/templates/: financial.yaml  production-safety.yaml
plans/: F030-implementation-plan.md
scripts/: cstp.py
skills/cognition-engines/: SKILL.md
src/cognition_engines/: __init__.py
tests/: test_167_calibration_store.py  test_a2a_server.py  test_attribution_service.py  test_audit.py  test_bridge_definitions.py  test_bridge_extractor.py  test_calibration_service.py  test_config_env.py  test_decision_service.py  test_deliberation_tracker.py  test_evaluators.py  test_f002_query_decisions.py  test_f003_check_guardrails.py  test_f007_record_decision.py  test_f008_review_decision.py  test_f009_get_calibration.py  test_f023_deliberation.py  test_f029_deliberation_agent_id.py  test_f030_circuit_breaker.py  test_f041_compaction.py  test_f041_compaction_integration.py  test_f044_ready.py  test_f045_followups.py  test_f045_graph_service.py  test_f045_graph_store.py  test_f046_pre_action.py  test_f046_preaction_hooks.py  test_f047_session_context.py  test_f048_factory.py  test_f048_memory_store.py  test_f049_deliberation.py  test_f049_issue149.py  test_f049_preaction_deliberation.py  test_f050_migration.py  test_f050_sqlite_storage.py  test_f054_cel_guardrails.py  test_f126_debug_tracker.py  test_f163_enrichment.py  test_f169_bridge_in_summary.py  test_f172_reindex_metadata.py  (+8 more)
website/: changelog.md  contact.md  index.md  nous.md  package-lock.json  package.json
website/.vitepress/: config.mjs
website/guide/: agent-quickstart.md  bridge-definitions.md  dashboard.md  decision-protocol.md  deliberation-traces.md  getting-started.md  golden-path.md  guardrails.md  mcp-integration.md  related-decisions.md  (+2 more)
(+66 files in other folders)
