[project]
name = "cognition-agent-decisions"
version = "0.7.0"
description = "Decision intelligence for AI agents - semantic search, guardrails, and pattern detection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Emerson", email = "emerson@example.com" }
]
keywords = ["ai", "agents", "decisions", "guardrails", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
a2a = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "httpx>=0.27.0",
]
all = [
    "cognition-agent-decisions[a2a,dev]",
]

[project.urls]
Homepage = "https://github.com/tfatykhov/cognition-agent-decisions"
Repository = "https://github.com/tfatykhov/cognition-agent-decisions"
Documentation = "https://github.com/tfatykhov/cognition-agent-decisions#readme"

[project.scripts]
cstp-server = "a2a.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognition_engines", "a2a"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=a2a --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "SIM108"]  # E501=line length, SIM108=ternary
