[project]
name = "cognition-agent-decisions"
version = "0.11.0"
description = "Decision intelligence for AI agents - semantic search, guardrails, and pattern detection"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    { name = "Timur Fatykhov", email = "tfatykhov@gmail.com" }
]
keywords = ["ai", "agents", "decisions", "guardrails", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "chromadb>=0.4.0",
    "rank-bm25>=0.2.2",  # F017: BM25 keyword search
    "networkx>=3.0",  # F045: Decision graph storage
]

[project.optional-dependencies]
a2a = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]
mcp = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "httpx>=0.27.0",
]
all = [
    "cognition-agent-decisions[a2a,mcp,dev]",
]

[project.urls]
Homepage = "https://github.com/tfatykhov/cognition-agent-decisions"
Repository = "https://github.com/tfatykhov/cognition-agent-decisions"
Documentation = "https://github.com/tfatykhov/cognition-agent-decisions#readme"

[project.scripts]
cstp-server = "a2a.server:run_server"
cstp-mcp = "a2a.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognition_engines", "a2a"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=a2a --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "SIM108", "I001", "UP045", "SIM110", "SIM105", "SIM102"]  # Ignore style rules that require refactoring
